[project]
name = "multi-center-fed-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "===3.7.17"
dependencies = [
    "bokeh==2.4.3",
    "jupyter==1.0.0",
    "matplotlib==3.2.2",
    "numpy==1.18.5",
    "pandas==1.1.5",
    "pillow==9.5.0",
    "scikit-learn==0.24.2",
    "scipy==1.4.1",
    "tensorflow==1.15.5",
    "tqdm==4.66.1",
]
